--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@ nav button{
     cursor: pointer;
 }
 
+#loginbutton{
+    border: 0;
+    outline: 0;
+    background: #db0001;
+    color: #fff;
+    font-size:12px;
+    text-decoration: none;
+}
+
 .language-btn{
     display: inline-flex;
     align-items: center;
